created skeleton layout

--- a/index.html
+++ b/index.html
@@ -4,3 +4,10 @@
   <title>Aldi</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no">
+  <link rel="stylesheet" href="css/style.css">
+  <script async src="js/script.js"></script>
+<head>
+<body>
+
+</body>
+</html>
