Added the top navigation and logo to match Aldi's website while implementing our solution.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html lang="en"
 <head>
-  <title>Aldi</title>
+  <title>Homepage</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no">
+  <link rel="stylesheet" href="css/meyers_and_normalize-form_reset.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
   <script async src="js/script.js"></script>
 <head>
 <body>
-
+  <img src="media/logo.png" alt="Aldi's logo" class="logo">
+  <div class="mobile-container">
+    <div class="topnav">
+      <a href="index.html" class="active">Homepage</a>
+      <div id="myLinks">
+        <a href="recipe.html">Recipes</a>
+        <a href="email.html">Email Sign Up</a>
+      </div>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
+    </div>
+    <div class="main">
+      <h3>content</h3>
+    </div>
+  </div>
 </body>
 </html>
