--- a/index.html
+++ b/index.html
@@ -11,20 +11,19 @@
 <head>
 <body>
   <img src="media/logo.png" alt="Aldi's logo" class="logo">
-  <div class="mobile-container">
-    <div class="topnav">
-      <a href="index.html" class="active">Homepage</a>
-      <div id="myLinks">
-        <a href="recipe.html">Recipes</a>
-        <a href="email.html">Email Sign Up</a>
-      </div>
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-        <i class="fa fa-bars"></i>
-      </a>
+  <div class="topnav">
+    <a href="index.html" class="active">Homepage</a>
+    <div id="myLinks">
+      <a href="recipe.html">Recipes</a>
+      <a href="email.html">Email Sign Up</a>
     </div>
-    <div class="main">
-      <h3>content</h3>
-    </div>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <i class="fa fa-bars"></i>
+    </a>
+  </div>
+  <div class="main">
+    <h3>content</h3>
+    <p>testing</p>
   </div>
 </body>
 </html>
