--- a/email.html
+++ b/email.html
@@ -22,7 +22,7 @@
     </a>
   </div>
   <div class="main">
-    <h3>content</h3>
+    <h1>Sign Up for ALDI Emails </h1>
     <p>testing</p>
   </div>
 </body>
