added content to index page and uploaded images to media

--- a/index.html
+++ b/index.html
@@ -22,8 +22,15 @@
     </a>
   </div>
   <div class="main">
-    <h3>content</h3>
-    <p>testing</p>
+    <div class="ad">
+      <a href="https://new.aldi.us/weekly-specials/weekly-ads"><img src="media/ad.png" alt="View Weekly Ad" class="ad"></a>
+    </div>
+    <div class="finds">
+      <a href="https://new.aldi.us/products/aldi-finds/k/2"><img src="media/finds.png" alt="Upcoming ALDI Finds" class="finds"></a>
+    </div>
+    <div class="subscribe">
+      <a href="email.html"><img src="media/subscribe.png" alt="Email Signup" class="subscribe"></a>
+    </div>
   </div>
 </body>
 </html>
