clicking on the logo takes you to the homepage

--- a/recipe.html
+++ b/recipe.html
@@ -10,7 +10,7 @@
   <script async src="js/script.js"></script>
 <head>
 <body>
-  <img src="media/logo.png" alt="Aldi's logo" class="logo">
+  <a href="index.html"><img src="media/logo.png" alt="Aldi's logo" class="logo"></a>
   <div class="topnav">
     <a href="recipe.html" class="active">Recipes</a>
     <div id="myLinks">
