--- a/email.html
+++ b/email.html
@@ -10,7 +10,7 @@
   <script async src="js/script.js"></script>
 <head>
 <body>
-  <img src="media/logo.png" alt="Aldi's logo" class="logo">
+  <a href="index.html"><img src="media/logo.png" alt="Aldi's logo" class="logo"></a>
   <div class="topnav">
     <a href="email.html" class="active">Email Sign Up</a>
     <div id="myLinks">
