--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         <a href="email.html"><img src="media/subscribe2.png" alt="Email Signup" class="subscribe"></a>
       </div>
     </div>
+    <div class="recipe">
+      <a href="recipe.html"><img src="media/recipes.png" alt="View Recipes" class="recipe"></a>
+    </div>
     <div class="finds">
       <a href="https://new.aldi.us/products/aldi-finds/k/2"><img src="media/finds2.png" alt="Upcoming ALDI Finds" class="finds"></a>
-    </div>
-    <div class="online">
-      <a href="https://new.aldi.us/"><img src="media/online2.png" alt="Shop Online" class="online"></a>
     </div>
   </div>
 </body>
