add fullname label

--- a/email.html
+++ b/email.html
@@ -23,7 +23,12 @@
   </div>
   <div class="main">
     <h1>Sign Up for ALDI Emails </h1>
-    <p>testing</p>
+    <p>Sign up for the ALDI newsletter to receive emails when new weekly ads are available. You'll be the first to know about this week’s low prices and new ALDI Finds.</p>
+    <form method="get" action="#null" autocomplete="on">
+      <label for="fullname">Full Name*</label>
+      <input type="text" id="fullname" name="fullname" placeholder="Your full name" required>
+     
+    </form>
   </div>
 </body>
 </html>
