--- a/email.html
+++ b/email.html
@@ -27,7 +27,9 @@
     <form method="get" action="#null" autocomplete="on">
       <label for="fullname">Full Name*</label>
       <input type="text" id="fullname" name="fullname" placeholder="Your full name" required>
-     
+      <label for="zipcode">Zip Code*</label>
+      <input type="text" id="zipcode" name="zipcode" placeholder="Your ZIP code" required>
+
     </form>
   </div>
 </body>
