add email label

--- a/email.html
+++ b/email.html
@@ -29,7 +29,9 @@
       <input type="text" id="fullname" name="fullname" placeholder="Your full name" required>
       <label for="zipcode">Zip Code*</label>
       <input type="text" id="zipcode" name="zipcode" placeholder="Your ZIP code" required>
-
+      <label for="email">Email Address*</label>
+      <input type="email" id="email" name="email" placeholder="Your email address" required>
+      
     </form>
   </div>
 </body>
