add submit button

--- a/email.html
+++ b/email.html
@@ -31,7 +31,7 @@
       <input type="text" id="zipcode" name="zipcode" placeholder="Your ZIP code" required>
       <label for="email">Email Address*</label>
       <input type="email" id="email" name="email" placeholder="Your email address" required>
-      
+      <button type="submit" id ="button">Start Saving</button>
     </form>
   </div>
 </body>
