add main class container

--- a/email.html
+++ b/email.html
@@ -22,17 +22,19 @@
     </a>
   </div>
   <div class="main">
-    <h1>Sign Up for ALDI Emails </h1>
-    <p>Sign up for the ALDI newsletter to receive emails when new weekly ads are available. You'll be the first to know about this week’s low prices and new ALDI Finds.</p>
-    <form method="get" action="#null" autocomplete="on">
-      <label for="fullname">Full Name*</label>
-      <input type="text" id="fullname" name="fullname" placeholder="Your full name" required>
-      <label for="zipcode">Zip Code*</label>
-      <input type="text" id="zipcode" name="zipcode" placeholder="Your ZIP code" required>
-      <label for="email">Email Address*</label>
-      <input type="email" id="email" name="email" placeholder="Your email address" required>
-      <button type="submit" id ="button">Start Saving</button>
-    </form>
+    <main class="signup-container">
+      <h2>Sign Up for ALDI Emails </h2>
+      <p>Sign up for the ALDI newsletter to receive emails when new weekly ads are available. You'll be the first to know about this week’s low prices and new ALDI Finds.</p>
+      <form method="get" action="#null" autocomplete="on">
+        <label for="fullname">Full Name*</label>
+        <input type="text" id="fullname" name="fullname" placeholder="Your full name" required>
+        <label for="zipcode">Zip Code*</label>
+        <input type="text" id="zipcode" name="zipcode" placeholder="Your ZIP code" required>
+        <label for="email">Email Address*</label>
+        <input type="email" id="email" name="email" placeholder="Your email address" required>
+        <button type="submit" id ="button">Start Saving</button>
+      </form>
+    </main>  
   </div>
 </body>
 </html>
