--- a/email.html
+++ b/email.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
   <script async src="js/script.js"></script>
-<head>
+</head>
 <body>
   <a href="index.html"><img src="media/logo.png" alt="Aldi's logo" class="logo"></a>
   <div class="topnav">
