--- a/email.html
+++ b/email.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
-<head>
+</head>
 <body>
   <a href="index.html"><img src="media/logo.png" alt="Aldi's logo" class="logo"></a>
   <div class="topnav">
